@@ -146,7 +146,7 @@ New commands:
 - damage
   Displays the monsters and skills that damaged you.
 - help [command]
-  not new but updated and more usefull
+  not new but updated and more useful
   you get now all options for a specific command
 - guild break <guild name>
   Disband your guild.
@@ -156,6 +156,8 @@ New commands:
   Kick a guild member out of the guild.
 - storage desc <storage item #>
   Display storage item description.
+- eq
+  Lists what you are wearing in each equipment slot.
 
 New config options:
 - partySkill: target_dist (range)
